# EEE4022S_Project

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_package/share/my_package/: package.sh
install/py_pubsub/lib/py_pubsub/: camera_record  capture  compare  compare_feature  compare_mean_error  control  control_mpc  control_nmpc  drift_measure  follow  full_record  pose_sub  visualisation  waypoint follow
install/py_pubsub/share/py_pubsub/: package.sh  package.xml
log/: latest_build  latest_list
src/my_package/: package.xml  setup.py
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: chnage_27_points.py  compare_images_orb.py
