<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gvnkha001@myuct.ac.za">riser14</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>casadi</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend> 
  <exec_depend>time</exec_depend> 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>nav2_simple_commander</test_depend>
  <test_depend>numpy</test_depend>
  <test_depend>tf_transformations</test_depend>
  <test_depend>casadi</test_depend>
  <test_depend>csv</test_depend>
  <test_depend>math</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>cv2</test_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>os</test_depend>
  <test_depend>matplotlib</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>time</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
